src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}


/* Social Icons */

.social-icons-container{
    display: flex;
    justify-content: center;
    margin: 2rem auto 0 auto;
    max-width: 90%;
}
.icon-container {
    margin: 0 1rem;
    position: relative;
    display: inline-block;
}

.icon-container:hover svg {
    transform: scale(1.25);
    transition: transform 0.2s, stroke 0.2s;
}

.icon-container:hover .tooltip {
    transform: translateX(-50%) scale(1);
    opacity: 1;
}

.tooltip {
    position: absolute;
    top: 50px;
    left: 50%;
    transform: translateX(-50%);
    z-index: 20;
    opacity: 0;
    white-space: nowrap;
    color: #fff;
    font-size: 1.125rem;
    font-weight: 700;
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
}

.social-button {
    background: none;
    border: none;
    cursor: pointer;
    padding: 0;
    margin: 0;
}

.svg-icons {
    width: 2rem;
    height: 2rem;
    display: block;
    transition: transform 0.2s, stroke 0.2s;
    stroke: #fff;
}

.GitHub:hover .svg-icons {
    stroke: #333;
}

.Twitter:hover .svg-icons {
    stroke: #1da1f2;
}

.LinkedIn:hover .svg-icons {
    stroke: #0077b5;
}

.Instagram:hover .svg-icons {
    stroke: #c13584;
}

@media (min-width: 768px) {
    .icon-container {
        margin: 0 3rem;
    }

    .svg-icons {
        width: 2.5rem;
        height: 2.5rem;
    }

    .tooltip {
        font-size: 1.25rem;
    }
}

@media (max-width: 480px) {
    .svg-icons {
        width: 1.2rem;
        height: 1.2rem;
    }

    .tooltip {
        font-size: 1rem;
        top: 30px;
    }
}

